2016-11-09  Bruno Haible  <bruno@clisp.org>

	Fix a relevant gcc warning of type -Wclobbered.
	* pathname.d (direntry_to_string): Use 'volatile' to disallow a
	dangerous compiler optimization.

2016-11-09  Bruno Haible  <bruno@clisp.org>

	Fix compilation error introduced on 2007-11-26.
	* spvw_allocate.d (error_speicher_voll): Rename to
	error_memory_exhausted and handle_memory_exhausted, respectively.

2016-09-04  Sam Steingold  <sds@gnu.org>

	* utils/fix-perms.sh (root): replace obsolete "-perm +111" with
	"-perm /111" and .cvsignore with .hgignore

2016-08-29  Sam Steingold  <sds@gnu.org>

	* lispbibl.d, built.d, spvw.d, spvw_garcol.d, spvw_garcol_old.d:
	* spvw_mark.d: remove the obsolete object representation WIDE_AUXI

2016-08-29  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (modprep): bind *module-name*, *module-line*,
	*module-package*, *package-properties* here ...
	(parse): ... not here
	(lexical-analysis): ignore //-comments inside /*-comments

2016-08-29  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script) [darwin]: disable nohup
	http://stackoverflow.com/questions/29112446/nohup-doesnt-work-with-os-x-yosmite-get-error-cant-detach-from-console-no-s
	http://stackoverflow.com/questions/23898623/nohup-cant-detach-from-console

2016-08-29  Sam Steingold  <sds@gnu.org>

	Fix bug#677: logical pathnames and letter case gone wrong
	* compiler.lisp (compile-file-pathname-helper): when output is
	supplied and is physical, translate input from logical before merge

2016-08-29  Sam Steingold  <sds@gnu.org>

	Fix bug#684: modprep handling of quotation mark in single line comment
	* utils/modprep.lisp (lexical-analysis): handle // comments

2016-08-28  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (output-all): bind all global variables in
	appropriate functions to allow loading into the same lisp session
	(output-all): make sure that the file name is printed on #line 1
	without #P
	(custom:*suppress-similar-constant-redefinition-warning*)